fix: Light mode override not working when system is in dark mode

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -32,19 +32,6 @@
   --foreground-rgb: var(--white-rgb);
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: var(--black);
-    --background-rgb: var(--black-rgb);
-    --foreground: var(--white);
-    --foreground-rgb: var(--white-rgb);
-  }
-
-  html {
-    color-scheme: dark;
-  }
-}
-
 /* Resets */
 * {
   box-sizing: border-box;
